main/default/objects/Georesults_family__c/fields/EmployeeCount__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCount__c</fullName>
    <label>Family Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>