main/default/objects/Georesults_family__c/fields/Family_State__c.field-meta.xml
<CustomField>
    <fullName>Family_State__c</fullName>
    <description>State Family Is Assigned to.</description>
    <label>Family State</label>
    <type>TextArea</type>
</CustomField>