main/default/objects/Georesults_family__c/fields/FamilyBusinessCount__c.field-meta.xml
<CustomField>
    <fullName>FamilyBusinessCount__c</fullName>
    <label>Count of Family Businesses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>