main/default/objects/Georesults_family__c/fields/FamilyID__c.field-meta.xml
<CustomField>
    <fullName>FamilyID__c</fullName>
    <description>Assigned Family ID</description>
    <label>FamilyID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>