main/default/objects/Georesults_family__c/fields/FamilyTTSPerMonth__c.field-meta.xml
<CustomField>
    <fullName>FamilyTTSPerMonth__c</fullName>
    <label>Family TTS Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>