main/default/objects/Georesults_family__c/fields/GeoResults_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>GeoResults_Family_Name__c</fullName>
    <label>GeoResults Family Name</label>
    <type>TextArea</type>
</CustomField>